<resources>
    <string name="app_name">RoyalJourney</string>
    <string name="login_text">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="by_tapping_">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="Keep">Keep Me Signed In</string>
    <string name="MeAbout">Email Me About Special Pricing</string>
    <string name="create_acco">Create Account</string>
    <string name="text_signin">already have an account?</string>
    <string name="welcome_back_login">Chào mừng trở lại!</string>
    <string name="enter_your_email_login">Nhập email của bạn</string>
    <string name="forgot_password_login">Quên mật khẩu</string>
    <string name="an_account_login">Bạn chưa có tài khoản?</string>
    <string name="sign_up_login">Đăng ký</string>
    <string name="sign_in_login">Đăng nhập</string>
    <string name="enter_pass_login">Nhập mật khẩu</string>
    <string name="welcome_royaljourney_registration">RoyalJourney chào mừng!</string>
    <string name="help_your_registration">Hãy giúp bạn hoàn thành nhiệm vụ của mình</string>
    <string name="full_name_registration">Nhập tên đầy đủ của bạn</string>
    <string name="enter_your_email_registration">Nhập email của bạn</string>
    <string name="enter_pass_registration">Nhập mật khẩu</string>
    <string name="confirm_password_registration">Xác nhận lại mật khẩu</string>
    <string name="register_registration">Đăng ký</string>
    <string name="already_have_an_account_registration">Bạn đã có tài khoản?</string>
    <string name="forgot_pass_forgot">Forgot Password?</string>
    <string name="help_pass1_forgot">Đừng lo! Chúng tôi sẽ giúp bạn</string>
    <string name="help_pass2_forgot">khôi phục mật khẩu của bạn</string>
    <string name="send_my_password_forgot">Gửi mật khẩu của tôi</string>
    <string name="tin_tuc_detaiproduct">Tin tức mới nhất trên các lĩnh vực chính trị, xã hội, văn hóa, thể thao ở Việt Nam và quốc tế. Tin tức thời sự mỗi ngày sẽ được Tuổi Trẻ Online liên tục cập ...</string>
    <string name="huy_phong_detailproduct">Hủy đặt phòng là việc khách thông báo và yêu cầu khách sạn xỏa bỏ các thỏa thuận đặt buồng đã có giữa 2 bên ngay từ khi họ chưa lưu trú tại khách sạn vì không còn nhu cầu sử dụng các buồng đã thuê nữa. Khi đó, khách sạn có quyền bán những phòng khách đã báo hủy cho khách khác</string>
    <string name="feedback_detaiproduct">1 week ago</string>
    <string name="underlineText"><u>Hiển thị tất cả 53 đánh giá</u></string>
    <string name="room_detailproduct">1 bed big</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_homeFragment">Location</string>
    <string name="titleSearch_homeFragment">Địa chỉ tìm kiếm, hoặc gần bạn</string>
    <string name="NearFromYou_homeFragment">Gần bạn nhất</string>
    <string name="SeeMore_homeFragment">Xem thêm</string>
    <string name="BestForYou_homeFragment">Tốt cho bạn</string>
    <string name="Vuotsangphaishowmenu_fragmentText">Vuốt sang phải để show menu</string>
    <string name="OrchadHouse_itemBestforyou">Orchad House</string>
    <string name="Rp_itemBestForYou">Rp. 25000</string>
    <string name="Bedroom_itemBestforyou">6 Bedroom</string>
    <string name="Bathroom_itemBestforyou">6 Bathroom</string>
    <string name="DreamsvilleHouse_itemNearFromYou">Dreamsville House</string>
    <string name="JlSultanIskandarMuda_itemNearFromYou">Jl. Sultan Iskandar Muda</string>
    <string name="km_itemNearFromYou">1.8 km</string>
    <string name="home_arrays">Khám phá</string>
    <string name="profile_arrays">Hồ sơ</string>
    <string name="nearby_arrays">Gần tôi</string>
    <string name="bookmark_arrays">Yêu thích</string>
    <string name="notification_arrays">Thông báo</string>
    <string name="message_arrays">Tin nhắn</string>
    <string name="setting_arrays">Cài đặt</string>
    <string name="help_arrays">Trợ giúp</string>
    <string name="logout_arrays">Đăng xuất</string>
    <string name="LoginSuccess">Sign in successfully</string>
    <string name="LoginFailed">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="RegisterSuccess">Sign up successfully</string>
    <string name="RegisterFailed">Email already exists</string>
    <string name="title_activity_near_from_you_maps">NearFromYouMapsActivity</string>
    <string name="api_key_app">AIzaSyDId5Ne9ty3PAl9aMBW4A-_7WcXfH7ngFA</string>
    <string name="distance">Distance: </string>
    <string name="time">Time: </string>
    <string name="textPerNight"> /đêm</string>
    <string name="textPerNightVN"> /đêm</string>
    <string name="askForMapPermission">Xin lỗi bạn phải cấp quyền truy cập vị trí</string>
    <string name="motadetail">Mô tả</string>
    <string name="phongdetail">Nơi bạn sẽ ngủ nghỉ</string>
    <string name="phongtamdetail">Phòng tắm</string>
    <string name="tienichdetail">Tiện nghi của chúng tôi</string>
    <string name="anhdetail">Ảnh phòng</string>
    <string name="mapdetail">Nơi bạn sẽ đến</string>
    <string name="availabilitystatusdetail">Tình trạng phòng sẵn:</string>
    <string name="houserulesdetail">Nội quy nhận phòng</string>
    <string name="Cancellationpolicydetail">Chính sách hủy</string>
    <string name="choseRoom">Chọn phòng</string>
    <string name="CancellationpolicydetailVer2">Chính sách chung</string>
    <string name="pricedetail">Giá thuê</string>
    <string name="rentnowdetail">Chọn phòng</string>
    <string name="danhgiadetail">Đánh giá</string>
    <string name="Ytedetail">Y tế và an toàn</string>
    <string name="Y_te_detail">Các biện pháp an toàn trong đại dịch COVID-19 của BookingAppRoyalJourney được áp dụng. Có máy phát hiện khí CO/máy báo khói, Camera an ninh/thiết bị ghi</string>
    <string name="dialogstartdate">Thêm ngày bắt đầu của bạn để tiếp tục</string>
    <string name="dialogcontentnomal">Điều này đảm bảo rằng bạn sẽ không bỏ lỡ nội dung cập nhật về chuyến đi</string>
    <string name="nullphone">Thêm số điện thoại của bạn</string>
    <string name="limitperson">Số lượng khách thuê</string>
    <string name="textpayment">Phương thức thanh toán</string>
    <string name="textpayment2">Vui lòng chọn phương thức thanh toán</string>
    <string name="home">Home</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="Citizen_identity_card">Citizen identity card</string>
    <string name="SAVE">LƯU</string>
    <string name="setting_arrays_travel">Chuyến đi</string>
    <string name="your_order_just_arrived">Đoạn Chat Của Bạn Ở Đây</string>
    <string name="chuyen_di_nhu_nao">Chuyến đi như nào?</string>
    <string name="feedBackHd">Đánh giá của bạn giúp chúng tôi hoàn thiện hơn</string>
    <string name="submit_feedback">Lưu Đánh Giá</string>
    <string name="hint_comment">Đánh giá của bạn...</string>
    <string name="Ten">Tên</string>
    <string name="Sdt_editprofile">Số điện thoại</string>
    <string name="cccd">CCCD</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="Thay_doi">Thay đổi</string>
    <string name="comment_feedback">Viết Đánh Giá</string>
    <string name="BillOder_add_amount">Thêm số lượng khách thuê của bạn để tiếp tục</string>
    <string name="BillOder_add_uy_tin">Xin lỗi bạn chưa đủ uy tín</string>
    <string name="BillOder_add_uy_tin_5">Bạn phải đặt phòng thành công ít nhất 5 lần thì mới sử dụng được chức năng này</string>
    <string name="BillOder_host_received_date">Chủ nhà chỉ cho phép nhận phòng từ ngày</string>
    <string name="BillOder_add_pay_day">Chủ nhà chỉ cho phép trả phòng từ ngày</string>
    <string name="BillOder_add_card">Thêm thẻ thanh toán của bạn để tiếp tục</string>
    <string name="BillOder_add_phone_number">Thêm số điện thoại của bạn để tiếp tục</string>
    <string name="BillOder_add_phone_number_check">Xin nhãy nhập số điện thoại</string>
    <string name="BillOder_BillOder_add_amount">Chủ nhà chỉ cho phép trả phòng vào ngày</string>
    <string name="BillOder_host_received_max">Số lượng khách không được quá cho phép</string>
    <string name="BillOder_add_phone_number_check_1">Xin hãy nhập số điện thoại khu vực việt nam</string>
    <string name="Successfully">Thành công</string>
    <string name="Successfully_feedback">Phản hồi của bạn đã được lưu lại , chúc bạn 1 ngày tốt lành</string>
    <string name="out_of_room">Đã hết phòng</string>
    <string name="Billoder_date_cancel">Huỷ trước ngày %s để được hoàn lại tiền , nếu bạn hủy sau ngày %s sẽ không hoàn lại tiền</string>
    <string name="Billoder_date_cancel_1">để được hoàn lại một phần tiền</string>
    <string name="Ly_do_huy">Hãy cho chúng tôi biết lí do bạn huỷ, ý kiển của bạn sẽ giúp chúng tôi hoàn thiện hơn</string>
    <string name="Date_cancel">để được hoàn lại tiền , nếu bạn hủy sau ngày</string>
    <string name="Date_cancel_1">sẽ không hoàn lại tiền</string>
    <string name="search">Tìm kiếm</string>
    <string name="null_title">Không có kết quả tìm kiếm phù hợp</string>
    <string name="tvContact">Bạn cũng có thể <u><b>gửi phản hồi cho chúng tôi</b></u></string>
    <string name="text6">Để bắt đầu, vui lòng trả lời một số câu hỏi để chúng tôi có thể kết nối với bạn với bộ phận phù hợp</string>
    <string name="text4">Trong trường hợp khách sạn không lấy phí hủy phòng thì RoyalRourney sẽ nhanh chóng thanh toán và hoàn lại 100% phí.</string>
    <string name="text5">Đối với một số trường hợp đã đặt cọc trước trong việc đặt phòng khách sạn sẽ không được hoàn lại tiền nếu bạn vi phạm chính sách đặt/hủy phòng của RoyalRourney.</string>
    <string name="step1">1. Nhấn vào <b>Menu</b> ≡ rồi chọn <b>Chuyến đi</b> rồi chọn chuyến đi mà bạn muốn huỷ</string>
    <string name="step2">2. Kiểm tra kĩ lại ddatin của bạn 1 lần nữa rồi nhấn <b>Huỷ</b></string>
    <string name="text3">Đặt phòng của bạn bị ảnh hưởng do trường hợp khẩn cấp hoặc thiên tai? Bạn có thể dủ điều kiện được hoàn tiền. Nếu bạn cần huỷ do tình hình dịch COVID_19</string>
    <string name="text1">Bạn có thể tìm thấy thông tin huỷ trên trang phòng cho thuê và trong quá trình đặt phòng - trước khi thanh toán</string>
    <string name="text2">Bạn luôn có thể tìm thấy chính sách huỷ và các tuỳ chọn trong mục <b>Chuyến đi</b> chỉ cần nhấp hoặc nhấn vào chi tiết chuyến đi là bạn sẽ thấy <b>Chính sách huỷ</b> của mình.Ngày và giờ mà chúng tôi hiển thị cho chính sách huỷ là theo múi h của địa phương của phòng. Thời gian huỷ để nhận tiền hoàn lại được tính từ giờ nhận phòng của phòng cho thuê theo múi giờ địa phương, hoặc nếu mục cho thuê không ghi rõ giờ nhận phòng</string>
    <string name="textCancelation_policy2">Nếu bạn gặp phải một vấn để nào đó trong thời gian ở, bạn có thể yêu cầu Chủ nhà khắc phục vấn đề đó, yếu cầu hoàn tiền một phần hoặc yêu cầu hoàn tiền đầy đủ. Bạn cần gửi yêu trong vòng 24 giờ kể từ thời điểm phát hiện vấn đề, còn chủ nhà sẽ có 1 giờ để trả lời. Nếu chủ nhà từ chối hoặc không phản hồi, bạn có thể yêu cầu RoyalRourney can thiệp để giúp giải quyết</string>
    <string name="textCancelation_policy">Kế hoạch của bạn đã thay đổi và bây giờ bạn cần huỷ đặt phòng của mình. Không thành vấn đề. Bạn có thể vào mục. Chuyến đi để huỷ</string>
    <string name="Setting">Cài đặt</string>
    <string name="ChangePassSetting">Đổi mật khẩu</string>
    <string name="OldPassSettings">Mật khẩu cũ</string>
    <string name="NewPassSettings">Mật khẩu mới</string>
    <string name="RePassSettings">Nhập lại khẩu mới</string>
    <string name="TitleRePassSettings">Nhập chính xác thông tin của bạn</string>
    <string name="Ban_muon_truy_cap_Camera">Bạn muốn truy cập Camera ?</string>
    <string name="Chon_cai_dat_de_cap_quyen_cho_ung_dung">Chọn phần Cài đặt để cấp quyền Camera cho ứng dụng.</string>
    <string name="Thoat">Thoát</string>
</resources>