<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_7dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        android:gravity="center"
        android:text="@string/Ban_muon_truy_cap_Camera"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_22dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:text="@string/Chon_cai_dat_de_cap_quyen_cho_ung_dung"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_17dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelDialogEditProfile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_60dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@drawable/background_btn_dialog_edit_profile"
            android:text="@string/Thoat"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_18dp" />

        <Button
            android:id="@+id/btnSettingDialogEditProfile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_60dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_weight="1"
            android:background="@drawable/background_btn_dialog_edit_profile"
            android:text="@string/Setting"
            android:textAllCaps="false"
            android:textColor="@color/_0A8ED9"
            android:textSize="@dimen/_18dp" />
    </LinearLayout>
</LinearLayout>

