<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CancellationPolicyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradientbackground_white"
        app:titleTextColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hướng dẫn thực hiện • Khách"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Huỷ đặt phòng"
                android:textColor="@color/black"
                android:textSize="@dimen/_26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/textCancelation_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/color_F6F6F6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Trước khi đặt phòng"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/text1"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/color_F6F6F6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Sau khi đặt phòng"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/text4"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/text5"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/color_F6F6F6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Trường hợp bất khả kháng"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/text3"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/color_F6F6F6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Để huỷ đặt phòng/đặt chỗ"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_40dp"
                android:layout_marginTop="@dimen/_20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/step2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Yêu cầu hoàn tiền trong thời gian ở"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/textCancelation_policy2"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/color_F6F6F6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Bạn cần liên hệ?"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/text6"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <Button
                android:id="@+id/btnContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/textview_border_black"
                android:foreground="?attr/selectableItemBackground"
                android:text="Liên hệ với chúng tôi"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <TextView
                android:layout_marginBottom="@dimen/_20dp"
                android:id="@+id/tvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/tvContact"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>