<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F6F6F6"
    tools:context=".ui.activity.ChangePasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ChangePassSetting"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/TitleRePassSettings"
        android:textColor="@color/black"

        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/oldPasswordSettings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_51dp"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/poppins"
        android:hint="@string/OldPassSettings"
        android:paddingStart="@dimen/_30dp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/newPassSettings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_51dp"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/poppins"
        android:hint="@string/NewPassSettings"
        android:paddingStart="@dimen/_30dp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordSettings"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/rePasswordSettings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_51dp"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/poppins"
        android:hint="@string/RePassSettings"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_30dp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassSettings"
        app:layout_constraintVertical_bias="0.107" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_62dp"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:background="@drawable/bg_buttom"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ChangePassSetting"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePasswordSettings"
        app:layout_constraintVertical_bias="0.269" />


</androidx.constraintlayout.widget.ConstraintLayout>